# activation_oracles

./: .gitmodules  README.md  analyze_lora.py  api_interp.py  compare_and_verify_hard_negatives.py  compare_sae_features.py  create_sae_sentences_and_activations.py  few_shot_sae_explanation.py  few_shot_walkthrough.py  judge_ssc_dev.py  launch.txt  minimal_sae_explanation.py  pyproject.toml  self_training.py  setup.sh  vectorized_eval_test_api_interp.py  view_original_sentences.py
experiments/: activation_oracle_demo.ipynb  classification_eval.py  gender_open_ended_eval.py  host_hf.py  host_vllm.py  personaqa_full_eval.py  personaqa_knowledge_eval.py  personaqa_knowledge_yes_no_eval.py  personaqa_open_ended_eval.py  personaqa_yes_no_eval.py  personaqa_yes_no_full_eval.py  simple_llama_model_demo.py  ssc_open_ended_eval.py  taboo_full_yes_no_eval.py  taboo_open_ended_eval.py
experiments/final_paper_plots/: plot_classification_eval.py  plot_gender_eval_results.py  plot_model_progression_line_chart_shapes.py  plot_personaqa_knowledge_eval_all_models.py  plot_personaqa_open_ended_results.py  plot_personaqa_results.py  plot_personaqa_results_all_models.py  plot_secret_keeping_results.py  plot_secret_keeping_sequence_vs_token.py  run_all_plots.sh  (+3 more)
interp_examples/: few_shot_walkthrough.py  llama_scope_demo.ipynb
interp_tools/: model_utils.py
nl_probes/: sae.py  sft.py  sft_cross_attn.py
notebooks/: ao_robustness.ipynb  publish.ipynb  train_condition.py
paper_demo/: em_demo.py
tests/: test_multilayer_prefix_tokenization.py
utility_scripts/: download.py  upload.py
(+18 files in other folders)
