[project]
name = "nl_probes"
version = "0.0.1"
description = "nl_probes"
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "hydra-core",
    "liger-kernel",
    "numpy",
    "pandas",
    "peft",
    "pyarrow",
    "fastparquet",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict",
    "torch",
    "torchdata",
    "transformers",
    "vllm",
    "einops",
    "wandb",
    "packaging",
    "uvicorn",
    "fastapi",
    "typer",
    "latex2sympy2_extended",
    "math_verify",
    "pydantic>=2",
    "regex",
    "python-dotenv",
    "slist",
    "plotly",
    "anthropic",
    "openai",
    "tenacity",
    "matplotlib",
    "trl",
    "bitsandbytes",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "circuitsvis",
    "jaxtyping",
    "huggingface-hub",
    "rapidfuzz",
    "hf_transfer",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nl_probes", "nl_probes.*"]


[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
